--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
-
+@font-face {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Oswald'),
+         url("sources/Oswald-VariableFont_wght.woff2");
+}
 * {
     font-family: 'Oswald', sans-serif;
     margin: auto;
 }
 .hidden {
     display: none;
+    visibility: hidden;
 }
 .header {
     display: flex;
@@ -323,28 +329,34 @@
 .error-message.reg {
     top: 10px;
 }
-.right-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 0;
-    box-sizing: border-box;
-    position: relative;
+.main-window {
+    position: absolute;
+    width: 100%;
+    /*height: 100%;*/
+    /*display: flex;*/
 }
+/*.right-side {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-between;*/
+/*    margin: 0;*/
+/*    box-sizing: border-box;*/
+/*    position: relative;*/
+/*}*/
 .user-info-container {
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    position: relative;
+    position: fixed;
     background-color: #43B0F1;
     border-radius: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    top: 50px;
-    right: 25px;
-    padding: 5px 0;
-    margin: 0 0 0 auto;
+    top: 20%;
+    right: 2%;
+    /*padding: 5px 0;*/
+    /*margin: 5% 0 0 auto;*/
     height: 17vh;
 }
 .info-line {
@@ -386,14 +398,17 @@
     cursor: default;
 }
 .tasks {
-    width: 70%;
+    position: fixed;
     overflow-y: auto;
+    width: 60%;
+    height: 50%;
     margin-top: 3%;
+    margin-left: 3%;
 }
 .tasks-container {
     background-color: #43B0F1;
-    border-radius: 20px;
-    height: 400px;
+    border-radius: 20px 20px 0 0;
+    height: 70%;
     opacity: 0.8;
     padding: 0 10px;
     overflow: hidden;
@@ -425,7 +440,6 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
-
 }
 .tasks-row {
     background-color: #FFFFFF;
@@ -438,6 +452,7 @@
     align-items: center;
     border-radius: 15px;
     height: 100%;
+    margin-top: 2px;
 }
 .tasks-row:hover {
     background-color: #CCCCCC;
@@ -450,45 +465,104 @@
     width: 19%;
     font-size: 18px;
     text-align: left;
-    padding: 0 4px;
+    padding-left: 10px;
     color: #057DCD;
+    overflow: hidden;
+    /*max-width: calc(100% - 10px);*/
 }
 .tasks-row div>p {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+.tasks-buttons {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: #43B0F1;
+    border-top: 1px solid #FFFFFF;
+    border-radius: 0 0 20px 20px;
+    height: 50px;
+    margin: 0;
+}
+.task-button {
+    background-color: #0f7dc9;
+    transition: background-color 0.2s ease;
+    border: none;
+    width: 100%;
+    height: 100%;
+    color: #FFFFFF;
+    font-size: 24px;
+    border-top: 1px solid #FFFFFF;
+}
+.task-button:not(:first-child):not(:last-child) {
+    border-right: 1px solid #FFFFFF;
+    border-left: 1px solid #FFFFFF;
+}
+.task-button:first-child {
+    border-radius: 0 0 0 20px;
+    border-right: 1px solid #FFFFFF;
+}
+.task-button:last-child {
+    border-radius: 0 0 20px 0;
+    border-left: 1px solid #FFFFFF;
+}
+.task-button:hover {
+    background-color: #3d84b6;
+    transition: background-color 0.2s ease-in-out;
+}
 .task-info-container {
     background-color: #43B0F1;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    width: 100%;
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
+    justify-content: flex-start;
+    justify-items: flex-start;
+    align-items: flex-start;
     flex-direction: column;
-    position: relative;
-    height: 53%;
-    top: 50px;
-    right: 25px;
+    position: fixed;
+    bottom: 22%;
+    right: 2%;
+    width: 300px;
+    /*height: 53%;*/
+    /*top: 100px;*/
+    /*right: 50px;*/
+    margin: 0;
 }
 .task-info-header {
     position: absolute;
     top: -50px;
-    text-align: left;
-    padding: 4px;
+    /*text-align: right;*/
+    padding-right: 10px;
+    align-self: center;
 }
 .task-name {
-
+    margin-left: 0;
+}
+.task-name p {
+    font-size: 20px;
+    text-align: left;
+    font-weight: 400;
 }
 .task-description {
-
+    margin-left: 0;
+}
+.task-description p {
+    text-align: left;
 }
 .task-date {
+    margin-left: 0;
+}
+.task-date p {
 
 }
 .task-time {
+    margin-left: 0;
+}
+.task-time p {
 
 }
