--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 * {
     font-family: 'Oswald', sans-serif;
     margin: auto;
+    cursor: default;
 }
 .hidden {
     display: none;
@@ -278,7 +279,6 @@
 .input-container {
     width: 100%;
     margin-bottom: 15px;
-
 }
 .input {
     width: calc(100% - 20px);
@@ -287,6 +287,7 @@
     border-radius: 15px;
     outline: none;
     margin: 0;
+    cursor: text;
 }
 .submit-button {
     width: calc(100% - 20px);
@@ -332,17 +333,7 @@
 .main-window {
     position: absolute;
     width: 100%;
-    /*height: 100%;*/
-    /*display: flex;*/
 }
-/*.right-side {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: space-between;*/
-/*    margin: 0;*/
-/*    box-sizing: border-box;*/
-/*    position: relative;*/
-/*}*/
 .user-info-container {
     box-sizing: border-box;
     display: flex;
@@ -355,8 +346,6 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     top: 20%;
     right: 2%;
-    /*padding: 5px 0;*/
-    /*margin: 5% 0 0 auto;*/
     height: 17vh;
 }
 .info-line {
@@ -399,7 +388,7 @@
 }
 .tasks {
     position: fixed;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     width: 60%;
     height: 50%;
     margin-top: 3%;
@@ -411,7 +400,18 @@
     height: 70%;
     opacity: 0.8;
     padding: 0 10px;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: visible;
+}
+.tasks-body {
+    height: 30vh;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    margin-bottom: 10px;
+}
+.tasks-body::-webkit-scrollbar {
+    display: none;
 }
 .tasks-table {
     width: 100%;
@@ -440,10 +440,12 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .tasks-row {
     background-color: #FFFFFF;
-    transition: transform 0.2s ease, background-color 0.2s ease;
+    transition: transform 0.2s ease, background-color 0.2s ease, height 0.2s ease;
     line-height: 1.5;
     display: flex;
     flex-direction: row;
@@ -451,15 +453,17 @@
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    height: 100%;
+    height: 27px;
     margin-top: 2px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .tasks-row:hover {
     background-color: #CCCCCC;
-    transform: scale(1.02);
-    height: calc(100% + 40px);
+    transform: scale(1.015);
+    /*height: 30px;*/
     z-index: 10;
-    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out, height 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 .tasks-row div {
     width: 19%;
@@ -468,7 +472,6 @@
     padding-left: 10px;
     color: #057DCD;
     overflow: hidden;
-    /*max-width: calc(100% - 10px);*/
 }
 .tasks-row div>p {
     overflow: hidden;
@@ -479,10 +482,10 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-items: center;
-    justify-content: space-between;
-    align-items: flex-start;
-    background-color: #43B0F1;
+    /*justify-items: center;*/
+    justify-content: flex-start;
+    /*align-items: flex-start;*/
+    /*background-color: #43B0F1;*/
     border-top: 1px solid #FFFFFF;
     border-radius: 0 0 20px 20px;
     height: 50px;
@@ -492,26 +495,36 @@
     background-color: #0f7dc9;
     transition: background-color 0.2s ease;
     border: none;
-    width: 100%;
+    margin: 0;
     height: 100%;
     color: #FFFFFF;
     font-size: 24px;
     border-top: 1px solid #FFFFFF;
 }
-.task-button:not(:first-child):not(:last-child) {
+.task-button:first-child {
+    border-radius: 0 0 20px 20px;
+    border-right: 1px solid #FFFFFF;
+    width: 20%;
+    background-color: #3076A4;
+}
+.task-button:nth-child(2) {
+    margin-left: auto;
+    border-radius: 0 0 0 20px;
+}
+.task-button:not(:first-child):not(:nth-child(2)):not(:last-child) {
     border-right: 1px solid #FFFFFF;
     border-left: 1px solid #FFFFFF;
-}
-.task-button:first-child {
-    border-radius: 0 0 0 20px;
-    border-right: 1px solid #FFFFFF;
 }
 .task-button:last-child {
     border-radius: 0 0 20px 0;
     border-left: 1px solid #FFFFFF;
 }
-.task-button:hover {
+.task-button:not(:first-child):hover {
     background-color: #3d84b6;
+    transition: background-color 0.2s ease-in-out;
+}
+.task-button:first-child:hover {
+    background-color: #0f7dc9;
     transition: background-color 0.2s ease-in-out;
 }
 .task-info-container {
@@ -528,15 +541,11 @@
     bottom: 22%;
     right: 2%;
     width: 300px;
-    /*height: 53%;*/
-    /*top: 100px;*/
-    /*right: 50px;*/
     margin: 0;
 }
 .task-info-header {
     position: absolute;
     top: -50px;
-    /*text-align: right;*/
     padding-right: 10px;
     align-self: center;
 }
@@ -565,4 +574,94 @@
 }
 .task-time p {
 
+}
+.adding-task-form-container {
+    width: 55%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 25%);
+    /*width: 40%;*/
+    /*height: 60%;*/
+}
+.form-background-add {
+    background-color: #3d84b6;
+    border-radius: 40px;
+    padding: 20px 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+.form-add {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /*align-items: center;*/
+}
+.left-side {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.right-side {
+    width: 300px;
+    padding-left: 60px;
+    padding-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 5px 0 0;
+}
+.right-side>div {
+    height: 100%;
+}
+.left-buttons {
+    display: flex;
+    justify-content: center;
+    border-collapse: collapse;
+}
+.back-button {
+    border-radius: 20px 0 0 20px;
+    border: 1px solid #3076A4;
+    transition: background-color 0.2s ease;
+    background-color: #057DCD;
+    color: #FFFFFF;
+    font-size: 24px;
+    padding-right: -1px;
+}
+.back-button:hover {
+    background-color: #395f83;
+    transition: background-color 0.2s ease-in-out;
+}
+.add-button {
+    border-radius: 0 20px 20px 0;
+    border: 1px solid #3076A4;
+    background-color: #2c9cde;
+    transition: background-color 0.2s ease;
+    color: #FFFFFF;
+    font-size: 24px;
+    padding-left: -1px;
+}
+.add-button:hover {
+    background-color: #3d84b6;
+    transition: background-color 0.2s ease-in-out;
+}
+.textarea {
+    resize: none;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    padding: 10px;
+    border: 1px solid #CCC;
+    border-radius: 15px;
+    outline: none;
+    cursor: text;
+    font-size: 26px;
+    overflow: hidden;
+}
+.textarea::placeholder {
+    text-align: center;
+    vertical-align: center;
+    font-size: 40px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
