--- a/style.css
+++ b/style.css
@@ -559,7 +559,7 @@
 }
 .task-description {
     margin-left: 0;
-    max-height: 120px;
+    height: 120px;
     overflow: hidden;
 }
 .task-description p {
@@ -570,15 +570,31 @@
 }
 .task-date {
     margin-left: 0;
+    display: flex;
+    flex-direction: row;
+    padding-left: 5px;
+    height: 30px;
+}
+.task-date img {
+    width: 20px;
+    height: 20px;
 }
 .task-date p {
-
+    padding: 0 0 0 5px;
 }
 .task-time {
     margin-left: 0;
+    display: flex;
+    flex-direction: row;
+    padding-left: 5px;
+    height: 30px;
+}
+.task-time img {
+    width: 20px;
+    height: 20px;
 }
 .task-time p {
-
+    padding: 0 0 0 5px;
 }
 .adding-task-form-container {
     position: absolute;
@@ -692,7 +708,7 @@
     padding-left: 1px;
     border-radius: 20px 0 0 20px;
     margin-bottom: auto;
-    background-color: #3d84b6;
+    background-color: #0f7dc9;
 }
 #status-button-radio {
     display: none;
@@ -721,10 +737,6 @@
 }
 .task-info-buttons:not(:first-child):hover {
     background-color: #3d84b6;
-    transition: background-color 0.2s ease-in-out;
-}
-.task-info-buttons:first-child:hover {
-    background-color: #0f7dc9;
     transition: background-color 0.2s ease-in-out;
 }
 .task-info-buttons img {
