--- a/style.css
+++ b/style.css
@@ -338,7 +338,6 @@
     width: 100%;
 }
 .user-info-container {
-    /*box-sizing: border-box;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -792,4 +791,36 @@
 .task-info-buttons:not(:first-child):hover {
     background-color: #3d84b6;
     transition: background-color 0.2s ease-in-out;
+}
+.change-password {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-260px, -70px);
+}
+.password {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+.change-password-submit {
+    background-color: #057DCD;
+    border-radius: 15px;
+    border: none;
+    width: 31px;
+    height: 31px;
+    padding: 0;
+    margin-left: 5px;
+}
+.change-password-submit:hover {
+    background-color: #3d84b6;
+    transition: background-color 0.2s ease-in-out;
+}
+.change-password-submit img {
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
 }
